--- a/app/src/main/res/layout/activity_pelicula4.xml
+++ b/app/src/main/res/layout/activity_pelicula4.xml
@@ -11,6 +11,7 @@
         android:id="@+id/imageView5"
         android:layout_width="287dp"
         android:layout_height="176dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,17 +19,21 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="377dp"
-        android:layout_height="114dp"
+        android:layout_width="336dp"
+        android:layout_height="224dp"
+        android:background="#C4000000"
         android:backgroundTint="@android:color/holo_orange_dark"
         android:drawableTint="#FF9800"
         android:text="Tanjiro, Nezuko, Zenitsu e Inosuke suben a un tren para ayudar al Hashira de la Llama Kyōjurō Rengoku (Kyujiro Rengoku) en su misión de dar caza a un demonio que ha matado a muchos Cazadores de Demonios. Poco después de subir, todos ellos son encantados y caen en un profundo sueño."
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView5" />
+        app:layout_constraintTop_toTopOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.804" />
 
     <Button
         android:id="@+id/btn_regresar4"
@@ -41,5 +46,21 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.869" />
+        app:layout_constraintVertical_bias="0.407" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#F45F25"
+        android:text="Kimetsu no Yaiba – The Movie: Mugen Train"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.097" />
 </androidx.constraintlayout.widget.ConstraintLayout>
