--- a/app/src/main/res/layout/activity_pelicula3.xml
+++ b/app/src/main/res/layout/activity_pelicula3.xml
@@ -15,14 +15,14 @@
         android:text="Sword Art Online - Ordinal Scale"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.583" />
+        app:layout_constraintVertical_bias="0.304" />
 
     <Button
         android:id="@+id/btn_regresar3"
@@ -38,8 +38,8 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="317dp"
-        android:layout_height="155dp"
+        android:layout_width="368dp"
+        android:layout_height="185dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -50,18 +50,18 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="345dp"
-        android:layout_height="395dp"
+        android:layout_width="346dp"
+        android:layout_height="310dp"
         android:background="#C4000000"
-        android:text="En el año 2026, Augma se lanza al público como un sistema alternativo al AmuSphere, ya que proyecta una capa de juego sobre la realidad mientras el jugador está consciente, en lugar de usar FullDive. El juego de combate más destacado es Ordinal Scale, en el que las habilidades de un jugador se clasifican por números ordinales.  Asuna, Lisbeth y Silica animan a Kirito a jugar el OS al enterarse de que han aparecido los jefes de Aincrad, aunque este último no le toma mucha importancia. Kirito se une a Asuna y Klein en una pelea de jefes contra Kagachi, el Señor Samurai en Akihabara, donde la mascota del juego, la cantante ídolo de IA Yuna, aparece y les da a los jugadores efectos de mejora mientras canta."
+        android:text="En el año 2026, Augma se lanza al público como un sistema alternativo al AmuSphere, ya que proyecta una capa de juego sobre la realidad mientras el jugador está consciente, en lugar de usar FullDive. El juego de combate más destacado es Ordinal Scale, en el que las habilidades de un jugador se clasifican por números ordinales."
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.342"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.765" />
+        app:layout_constraintVertical_bias="0.669" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
